Add standardize after dataset complete and genus/journal resolve pages

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -257,6 +257,10 @@ div.scrollmenu button {
     color:#b91c1c
 }
 
+.yellow {
+    color:#ff9900
+}
+
 .info-box {
     margin: 10px;
     padding: 5px;
