--- a/app/templates/admin/datasets.html
+++ b/app/templates/admin/datasets.html
@@ -54,7 +54,12 @@
                 <div class="col-lg-2">
                     <!-- Hidden input for keeping dataset id -->
                     <input id="dataset-id-{{ dataset.id }}" class="dataset-id" type="hidden" style="display: none" value="{{ dataset.id }}">
-                    {% if dataset.completed and dataset.standardized and not dataset.training %}
+                    {% if dataset.completed and not dataset.checker_dataset.standardized and not dataset.training %}
+                    <button type="button" class="btn btn-info" class="dataset-checker-button" id="dataset-checker-button-{{ dataset.id }}"
+                            onclick="startStandardization({{dataset.id}})">
+                        Run Standardization
+                    </button>
+                    {% elif dataset.completed and dataset.checker_dataset.standardized and not dataset.training %}
                     <button type="button" class="btn btn-info" class="dataset-checker-button" id="dataset-checker-button-{{ dataset.id }}"
                             onclick="startChecker({{dataset.id}})">
                         Run Checker
@@ -62,7 +67,7 @@
                     {% else %}
                         {% if dataset.training %}
                             {% set tooltip = "Test dataset, cannot run checker." %}
-                        {% elif not dataset.standardized %}
+                        {% elif not dataset.standardized and dataset.completed %}
                             {% set tooltip = "Standardization running in the background." %}
                         {% else %}
                             {% set tooltip = "Dataset not yet completed." %}
@@ -77,9 +82,9 @@
                     {{ dataset.curator.username }}
                 </div>
                 <div class="col-lg-2" id="dataset-{{ dataset.id }}-completed">
-                    {% if dataset.completed and (dataset.standardized or dataset.training) %}
+                    {% if dataset.completed and (dataset.checker_dataset.standardized or dataset.training) %}
                         <i class="far fa-check-circle green"></i>
-                    {% elif dataset.completed and not dataset.standardarized %}
+                    {% elif dataset.completed and not dataset.checker_dataset.standardarized %}
                         <i class="far fa-clock yellow"></i>
                     {% else %}
                         <i class="far fa-times-circle red"></i>
