--- a/app/templates/checker/resolve.html
+++ b/app/templates/checker/resolve.html
@@ -1,8 +1,10 @@
-{% import "bootstrap/utils.html" as utils %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block title %}Resolve Issue{% endblock %}
 {% block body%}
+<link rel="stylesheet" href="{{ url_for('static', filename='js/kekule/themes/default/kekule.css') }}">
+<script src="../../../static/js/kekule/kekule.js?modules=chemWidget"></script>
 {% with messages = get_flashed_messages(with_categories=true) %}
   <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
   {% if messages %}
@@ -33,18 +35,27 @@
             <div class="col-lg-6">
                 {% if article.doi %}
                     {% set dlink = "http://doi.org/"+article.doi %}
+                    {% set dblank = "_blank" %}
                 {% else %}
                     {% set dlink = "#" %}
+                    {% set dblank = "_self" %}
                 {% endif %}
-                <b>DOI:</b>  <a href="{{ dlink }}" target="_blank"> {{ article.doi or '-' }} </a>
+                <b>DOI:</b>  <a href="{{ dlink }}" target="{{ dblank }}"> {{ article.doi or '-' }} </a>
             </div>
             <div class="col-lg-6">
                 {% if article.pmid %}
                     {% set plink = "https://www.ncbi.nlm.nih.gov/pubmed/"+article.pmid|string %}
+                    {% set pblank = "_blank" %}
                 {% else %}
                     {% set plink = "#" %}
-                {% endif %}
-                <b>PMID:</b>  <a href="{{ plink }}" target="_blank">{{ article.pmid or '-' }}</a>
+                    {% set pblank = "_self" %}
+                    {% endif %}
+                <b>PMID:</b>  <a href="{{ plink }}" target="{{ pblank }}">{{ article.pmid or '-' }}</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <b>NPA Article ID:</b> {{ article.npa_artid or '-' }}
             </div>
         </div>
         <div class="row">
@@ -85,6 +96,29 @@
         </div>
     </div>
     <hr class="full-divider">
+    {% if compound %}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <b>Name:</b>    {{ compound.name }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <b>SMILES:</b>    {{ compound.smiles }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <b>Genus:</b>  {{ compound.source_genus }}
+                </div>
+                <div class="col-lg-6">
+                    <b>Species:</b>  {{ compound.source_species }}
+                </div>
+            </div>
+        </div>
+        <hr class="full-divider">
+    {% endif %}
     <div class="container">
         <div>
             <h3>
@@ -143,12 +177,87 @@
                 <div class="row form-group" style="justify-content:center">
                     {{ form.hidden_tag() }} {{ form.submit(class_='btn btn-success', type='submit') }}
                 </div>
+                <div class="row form-group" style="justify-content:center">
+                    {{ form.reject(class_='btn btn-danger', type='submit') }}
+                </div>
             </form>
-        {% elif problem.problem == "flat_match" or problem.problem == "duplicate" %}
-            structure
+        {% elif problem.problem == "flat_match" or problem.problem == "duplicate" or problem.problem == "name_match" %}
+            <h4>
+                Candidate
+            </h4>
+            <h5>
+                Name: {{ compound.name }}
+            </h5>
+            <h5>
+                InChIKey: {{ compound.inchikey }}
+            </h5>
+            <div class="row" style="justify-content: center">
+                <script id="compound-{{ compound.id }}-molblock" type="chemical/x-mdl-molfile">
+                {{ compound.molblock }}
+                </script>
+                <span style="display:block" data-widget="Kekule.ChemWidget.Viewer2D"
+                data-chem-obj="url(#compound-{{ compound.id }}-molblock)" data-predefined-setting="static" data-auto-size="true"
+                data-zoom="0.5">
+                </span>
+            </div>
+            <hr class="intro-divider">
+            <div class="container">
+                {% for comp in npa_compounds %}
+                    <h5>
+                        Name: {{ comp.name }}
+                    </h5>
+                    <h5>
+                        NPAID: <a href="https://npatlas-dev.chem.sfu.ca/joomla/index.php/explore/compounds#npaid={{ comp.npaid }}" target="_blank">
+                                    {{ comp.npaid }}
+                                </a>
+                    </h5>
+                    <h5>
+                        InChIKey: {{ comp.inchikey }}
+                    </h5>
+                    <div style="justify-content: center"></div>
+                        <script id="compound-{{ comp.npaid }}-molblock" type="chemical/x-mdl-molfile">
+                            {{ comp.molblock }}
+                        </script>
+                        <span style="display:block" data-widget="Kekule.ChemWidget.Viewer2D"
+                        data-chem-obj="url(#compound-{{ comp.npaid }}-molblock)" data-predefined-setting="static" data-auto-size="true"
+                        data-zoom="0.5">
+                        </span>
+                    </div>
+                {% endfor %}
+            </div>
+            <hr class="full-divider">
+            <h4>
+                Resolve:
+            </h4>
+            <form method="POST" class="form-horizontal">
+                {{ form.value() }}
+                <div class="row form-group">
+                    {{ form.select.label(class_="control-label col-lg-2") }}
+                    {{ form.select(class="form-control") }}
+                </div>
+                <div class="row form-group" id="npaid">
+                    {{ form.npaid.label(class_="control-label col-lg-2") }}
+                    {{ form.npaid(class="form-control") }}
+                </div>
+                <div class="row form-group">
+                    {{ form.notes.label(class_="control-label col-lg-2") }}
+                    {{ form.notes(class="form-control") }}
+                </div>
+                <div class="row form-group" style="justify-content:center">
+                    {{ form.hidden_tag() }} {{ form.submit(class_='btn btn-success', type='submit') }}
+                </div>
+                <div class="row form-group" style="justify-content:center">
+                    {{ form.reject(class_='btn btn-danger', type='submit') }}
+                </div>
+            </form>
         {% else %}
             {{ wtf.quick_form(form, button_map={'submit':'success'}) }}
         {% endif %}
+        <div class="row" style="justify-content: center">
+            <a class="btn btn-info" href=" {{url_for('data.article', cur_id=cur_id, ds_id=ds_id, art_id=article.id)}} ">
+                Edit Article?
+            </a>
+        </div>
     </div>
 </section>
 <script src="{{ url_for('static', filename='js/resolve.js') }}"></script>
